crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_146_Sachen_NINA_Master_Chu_The_Drunkard_Hu_Sachen_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-146-Sachen-NINA/Master Chu & The Drunkard Hu (Sachen) [!].zip
rom_sha256=f268bca534a683bfa8612d7c87240d1d0e3bfab54e9f56b7ee73dabbaf5584b7
frames=1141
fb_bytes=245760
cycles=37902153
audio_samples=1005322
audio_fnv1a64=8b114ac683140cab
checkpoint f900 fb_fnv1a64=bc04bf210cb82e84
checkpoint f1100 fb_fnv1a64=6cb666b363b884a6
