crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_146_Sachen_NINA_Pyramid_II_Sachen.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-146-Sachen-NINA/Pyramid II (Sachen) [!].nes
rom_sha256=0def71eeb6653bcc11026d35d113f04e2ff68af07ba7666d6453676db32df5fd
frames=1141
fb_bytes=245760
cycles=33949774
audio_samples=836505
audio_fnv1a64=bbde7ed47649842e
checkpoint f900 fb_fnv1a64=aacb427fbf8db4fb
checkpoint f1100 fb_fnv1a64=095f53af1fcfaf07
